--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
      <div class="b1">&nbsp;&nbsp;<i>Kai Wei is an</i>&nbsp;▼<br/>
      <div class="b2">&nbsp;&nbsp;Editor<br/>
      <div class="b3">&nbsp;&nbsp;Assistant Director</div>
-     <div class="b4">&nbsp;&nbsp;▶<i>based in Taiwan.</i><br/>
+     <div class="b4">&nbsp;&nbsp;▲<i>based in Taiwan.</i><br/>
   </ul>
 </header>
 <div id="white-background"></div>
