--- a/index.html
+++ b/index.html
@@ -57,8 +57,9 @@
     </ul>
   </nav>
   <!-- end main nav -->
- 
-  <img class="profile"src="image/keaton.jpg" alt="Avatar" style="width:100px">
+  <div class="profile">
+    <img class="profile"src="image/keaton.jpg" alt="Avatar" style="width:100px">
+  </div> 
   <ul class="bio-list clearfix">
      <div class="b1">&nbsp;&nbsp;<i>Kai Wei is an</i>&nbsp;▼<br/>
      <div class="b2">&nbsp;&nbsp;Editor<br/>
