--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
     <img class="profile"src="image/keaton.jpg" alt="Avatar" style="width:100px">
   </div> 
   <ul class="bio-list clearfix">
-     <div class="b1">&nbsp;&nbsp;<i>Kai Wei is an</i>&nbsp;▼<br/>
-     <div class="b2">&nbsp;&nbsp;Editor<br/>
-     <div class="b3">&nbsp;&nbsp;Assistant Director</div>
-     <div class="b4">&nbsp;&nbsp;▲<i>based in Taiwan.</i><br/>
+     <div class="b1"><i>Kai Wei is an</i>&nbsp;▼<br/>
+     <div class="b2">Editor<br/>
+     <div class="b3">Assistant Director</div>
+     <div class="b4">▲&nbsp;<i>based in Taiwan.</i><br/>
   </ul>
 </header>
 <div id="white-background"></div>
