--- a/projects/video_tigertail.html
+++ b/projects/video_tigertail.html
@@ -17,7 +17,8 @@
     <div class="small-break"></div>
     <div class="col-lg-8 col-sm-6">
       <p><b>Synopsis</b><br/>
-            A multi-generational tale of one family from 1950's Taiwan to present-day New York.
+            A man reflects on the lost love of his youth and his long-ago journey from Taiwan to America 
+            as he begins to reconnect with his estranged daughter.
       </p>
       <p><b>About</b><br/>
             Shot on various locations in Taiwan.
