--- a/projects/video_tigertail.html
+++ b/projects/video_tigertail.html
@@ -31,7 +31,7 @@
       <p> <strong> Writer</strong> <span class="alignright">Alan Yang</span></p>
     <div class="tiny-break"></div>
      <a class="button" aligh="center" href="http://www.imdb.com/title/tt8902948/" target="_blank">
-      IMDb Page<i class="fa fa-external-link"></i>
+      IMDb Page&nbsp;&nbsp;<i class="fa fa-external-link"></i>
      </a> 
       
     </div>
