--- a/projects/video_tigertail.html
+++ b/projects/video_tigertail.html
@@ -30,9 +30,11 @@
       <p> <strong> Director</strong> <span class="alignright">Alan Yang</span></p>
       <p> <strong> Writer</strong> <span class="alignright">Alan Yang</span></p>
     <div class="tiny-break"></div>
-     <a class="button" aligh="center" href="http://www.imdb.com/title/tt8902948/" target="_blank">
+    <div align="center">  
+     <a class="button" href="http://www.imdb.com/title/tt8902948/" target="_blank">
       IMDb Page&nbsp;&nbsp;<i class="fa fa-external-link"></i>
      </a> 
+     </div>
       
     </div>
     
