--- a/projects/video_tigertail.html
+++ b/projects/video_tigertail.html
@@ -21,7 +21,7 @@
             as he begins to reconnect with his estranged daughter.
       </p>
       <p><b>About</b><br/>
-            Shot on various locations in Taiwan.
+            The film was partially shot on location in Taiwan.
       </p>
       
     </div>
