--- a/projects/video_sun.html
+++ b/projects/video_sun.html
@@ -34,8 +34,11 @@
       <p> <strong> Director</strong> <span class="alignright">Yee Chih-Yen</span></p>
       <p> <strong> Writer</strong> <span class="alignright">Yee Chih-Yen</span></p>
     <div class="tiny-break"></div>
-    <a class="button" href="http://www.imdb.com/title/tt4044970/" target="_blank">
-    <i class="fa fa-external-link"></i> Visit IMDb Page</a> 
+    <div align="center">  
+       <a class="button" href="http://www.imdb.com/title/tt4044970/" target="_blank">
+          IMDb Page&nbsp;&nbsp;<i class="fa fa-external-link"></i>
+       </a> 
+     </div>
       
     </div>
     
