--- a/projects/video_monster.html
+++ b/projects/video_monster.html
@@ -17,7 +17,8 @@
             A school gang of bullies and a nerd encounter cannibal monsters. 
       </p>
       <p><b>About</b><br/>
-            The second film by Giddens Ko, best selling author and director of the 2011 hit, <i>"You are the Apple of My Eye"</i>. 
+            The second film by Giddens Ko, best selling author and director of the 2011 hit, 
+            <i><b><a href="https://www.imdb.com/title/tt2036416/">"You are the Apple of My Eye"</a></b></i>. 
       </p>
       
     </div>
