--- a/projects/video_boat.html
+++ b/projects/video_boat.html
@@ -28,8 +28,11 @@
       <p> <strong> Showrunner</strong> <span class="alignright">Nahnatchka Khan</span></p>
       <p> <strong> Writer</strong> <span class="alignright">Nahnatchka Khan</span></p>
     <div class="tiny-break"></div>
-    <a class="button" href="http://www.imdb.com/title/tt3551096/" target="_blank">
-    <i class="fa fa-external-link"></i> Visit IMDb Page</a> 
+     <div align="center">  
+       <a class="button" href="http://www.imdb.com/title/tt3551096/" target="_blank">
+          IMDb Page&nbsp;&nbsp;<i class="fa fa-external-link"></i>
+       </a> 
+     </div>
       
     </div>
     
