--- a/projects/video_nile.html
+++ b/projects/video_nile.html
@@ -16,8 +16,8 @@
        
       </p>
       <p><b>About</b><br/>
-            Official trailer to <i>"Daughter of the Nile"</i>, the 1987 classic by Taiwanese auteur Hou Hsiao-Hsien. 
-            The new 4k restoration version is premiered at the 66th Berlinale Classic and is to release in 2016.<br/><br/>    
+            Official trailer to <i>"Daughter of the Nile"</i>, the 1987 classic by renowned Taiwanese auteur Hou Hsiao-Hsien. 
+            The new 4k restoration version premiered at the 66th Berlinale Classic. <br/><br/>    
       </p>
       
     </div>
