--- a/projects/video_summer.html
+++ b/projects/video_summer.html
@@ -26,8 +26,11 @@
       <p> <strong> Director</strong> <span class="alignright">Zhou Quan</span></p>
       <p> <strong> Producer</strong> <span class="alignright">Jacqueline Liu</span></p>
     <div class="tiny-break"></div>
-    <!-- <a class="button" href="http://www.fablabtaiwan.org.tw/" target="_blank">
-    <i class="fa fa-external-link"></i> Visit Fablab Dynamic</a> -->
+   <div align="center">  
+       <a class="button" href="http://www.imdb.com/title/tt5644394/" target="_blank">
+          IMDb Page&nbsp;&nbsp;<i class="fa fa-external-link"></i>
+       </a> 
+     </div>
       
     </div>
     
