--- a/projects/video_jaehyung.html
+++ b/projects/video_jaehyung.html
@@ -26,8 +26,11 @@
       <p> <strong> Director</strong> <span class="alignright">Kim S. Falck-Jørgensen</span></p>
       <p> <strong> Writer</strong> <span class="alignright">Kim S. Falck-Jørgensen</span></p>
     <div class="tiny-break"></div>
-    <a class="button" href="http://www.imdb.com/title/tt3385620/" target="_blank">
-    <i class="fa fa-external-link"></i> Visit IMDb Page</a> 
+    <div align="center">  
+       <a class="button" href="http://www.imdb.com/title/tt3385620/" target="_blank">
+          IMDb Page&nbsp;&nbsp;<i class="fa fa-external-link"></i>
+       </a> 
+     </div>
       
     </div>
     
