--- a/projects/video_monster.html
+++ b/projects/video_monster.html
@@ -18,7 +18,7 @@
       </p>
       <p><b>About</b><br/>
             The second film by Giddens Ko, best selling author and director of the 2011 hit, 
-            <i><b><a href="https://www.imdb.com/title/tt2036416/">"You are the Apple of My Eye"</a></b></i>. 
+            <i><b><a href="https://www.imdb.com/title/tt2036416/" target="_blank">"You are the Apple of My Eye"</a></b></i>. 
       </p>
       
     </div>
