--- a/projects/video_everytime.html
+++ b/projects/video_everytime.html
@@ -19,7 +19,7 @@
             Music video of the song <i>"Everytime in Love"</i> by Taiwanese pop singer Liang Wen-Ying.<br/><br/>    
       </p>
       <p><b>Record</b><br/>
-         <a href="http://www.umusic.com.tw/">Universal Music Taiwan</a>   
+         <a href="http://www.umusic.com.tw/" target="_blank">Universal Music Taiwan</a>   
       
     </div>
     <div class="col-lg-4 col-sm-6 border-left-wrapper">
