--- a/projects/video_monster.html
+++ b/projects/video_monster.html
@@ -27,7 +27,11 @@
       <p> <strong> Director</strong> <span class="alignright">Giddens Ko</span></p>
       <p> <strong> Writer</strong> <span class="alignright">Giddens Ko</span></p>
     <div class="tiny-break"></div>
-  
+    <div align="center">  
+       <a class="button" href="http://www.imdb.com/title/tt6648404/" target="_blank">
+          IMDb Page&nbsp;&nbsp;<i class="fa fa-external-link"></i>
+       </a> 
+     </div>
       
     </div>
     
