--- a/projects/video_monster.html
+++ b/projects/video_monster.html
@@ -14,7 +14,7 @@
     <div class="small-break"></div>
     <div class="col-lg-8 col-sm-6">
       <p><b>Synopsis</b><br/>
-            A school gang of bullies and a nerd encounter cannibal monsters. 
+            A highschool gang of bullies and a nerd encounter canniballous monsters. 
       </p>
       <p><b>About</b><br/>
             The second film by Giddens Ko, best selling author and director of the 2011 hit, 
@@ -23,7 +23,7 @@
       
     </div>
     <div class="col-lg-4 col-sm-6 border-left-wrapper">
-      <p> <strong> Position</strong> <span class="alignright">2nd 2nd Assistnat Director</span></p>
+      <p> <strong> Position</strong> <span class="alignright">2nd 2nd Assistant Director</span></p>
       <p> <strong> Director</strong> <span class="alignright">Giddens Ko</span></p>
       <p> <strong> Writer</strong> <span class="alignright">Giddens Ko</span></p>
     <div class="tiny-break"></div>
