--- a/contact.html
+++ b/contact.html
@@ -58,6 +58,7 @@
     </ul>
   </nav>
   <!-- end main nav -->
+ </header>
   <div class="profile">
     <img class="profile"src="image/keaton.jpg" alt="Avatar" style="width:100px">
   </div> 
