--- a/projects/video_tigertail.html
+++ b/projects/video_tigertail.html
@@ -17,7 +17,7 @@
             as he begins to reconnect with his estranged daughter.
       </p>
       <p><b>About</b><br/>
-            The film was partially shot on location in Taiwan.
+            <i>Tigertail</i> was partially shot on location in Taiwan.
       </p>
       
     </div>
