--- a/projects/editing.html
+++ b/projects/editing.html
@@ -1,6 +1,6 @@
 <div id="custom-content" class="white-popup-block">
   <div class="videoWrapper">
-    <iframe src="https://player.vimeo.com/video/186516388" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+    <iframe src="https://player.vimeo.com/video/466840370/604ffd1a92" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
     
   </div>
   
