--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <li> <a href="#trailer">Trailer <span>7</span></a> </li>
           <li> <a href="#music">Music Video <span>3</span></a> </li>
           <li> <a href="#short">Short Film <span>1</span></a> </li>
-          <li> <a href="#commercial">Commercial <span>1</span></a> </li>
+          <li> <a href="#commercial">Showreel <span>1</span></a> </li>
         </ul>
       </li>
       <li> <a href="contact">Contact</a> </li>
@@ -88,6 +88,23 @@
   </div>
   </div>
   
+  <div id="shadow"></div>
+  <div id="container" class="clearfix no-margin">
+    <div class="element  clearfix col-lg-4 col-md-6 col-sm-6 col-xs-12 home feature">
+      <div class="margin-wrapper"> <a class="simple-ajax-popup" href="projects/Editing.html" data-title="">
+        <figure class="images"> <img src="image/Editing.jpg" alt="" /> </figure>
+        <div class="covering-image centered">
+          <div class="info-box-content">
+            <div class="parent">
+              <div class="child">
+                <h2>Video Editor Reel</h2>
+                <p class="uppercase">Showreel</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        </a> </div>
+    </div>
   <div id="shadow"></div>
   <div id="container" class="clearfix no-margin">
     <div class="element  clearfix col-lg-4 col-md-6 col-sm-6 col-xs-12 home feature">
@@ -350,6 +367,8 @@
         </a>
        </div>
     </div>
+    
+    <!--
      <div class="element  clearfix col-lg-4 col-md-6 col-sm-6 col-xs-12 home commercial">
       <div class="margin-wrapper"> <a class="simple-ajax-popup" href="projects/video_firefly.html" data-title="">
         <figure class="images"> <img src="image/firefly.jpg" alt="" /> </figure>
@@ -365,7 +384,7 @@
         </div>
         </a> </div>
     </div>
-    <!--
+    
     <div class="element  clearfix col-lg-4 col-md-6 col-sm-6 col-xs-12 home music">
       <div class="margin-wrapper"> <a href="image/nature06.jpg" data-title="" data-fancybox-group="group1" class="popup">
         <figure class="images"> <img src="image/solitude.jpg" alt="" /> </figure>
