--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <li> <a href="#trailer">Trailer <span>7</span></a> </li>
           <li> <a href="#music">Music Video <span>3</span></a> </li>
           <li> <a href="#short">Short Film <span>1</span></a> </li>
-          <li> <a href="#commercial">Showreel <span>1</span></a> </li>
+          <li> <a href="#reel">Showreel <span>1</span></a> </li>
         </ul>
       </li>
       <li> <a href="contact">Contact</a> </li>
@@ -90,8 +90,8 @@
   
   <div id="shadow"></div>
   <div id="container" class="clearfix no-margin">
-    <div class="element  clearfix col-lg-4 col-md-6 col-sm-6 col-xs-12 home feature">
-      <div class="margin-wrapper"> <a class="simple-ajax-popup" href="projects/Editing.html" data-title="">
+    <div class="element  clearfix col-lg-4 col-md-6 col-sm-6 col-xs-12 home reel">
+      <div class="margin-wrapper"> <a class="simple-ajax-popup" href="projects/editing.html" data-title="">
         <figure class="images"> <img src="image/Editing.jpg" alt="" /> </figure>
         <div class="covering-image centered">
           <div class="info-box-content">
