--- a/projects/editing.html
+++ b/projects/editing.html
@@ -7,24 +7,22 @@
   <script src="js/jquery.fitvids.js" type="text/javascript"></script>
   <div class="popup-content">
     <div class="col-lg-12 centered">
-      <h2>Editing Reel</h2>
+      <h2>Video Editor Reel</h2>
       <p class="uppercase">Showreel</p>
     </div>
     <div class="clear"></div>
     <div class="small-break"></div>
     <div class="col-lg-8 col-sm-6">
-   <!--    
+     <!-- 
       <p><b>About</b><br/>
-            Official trailer to <i>"Absent without Leave"</i>, a documentary about the seemingly forgotten 
-            Malaysian Communists in WWII. <br/><br/>
+            Composed of a variety of works. <br/><br/>
       </p>
-      
+      -->
     </div>
     <div class="col-lg-4 col-sm-6 border-left-wrapper">
-      <p> <strong> Position</strong> <span class="alignright">Trailer Editor</span></p>
-      <p> <strong> Director</strong> <span class="alignright">Kek-Huat Lau</span></p>
-      <p> <strong> Producer</strong> <span class="alignright">Jing-Lian Chen</span></p>
+      <p> <strong> Position</strong> <span class="alignright">Editor</span></p>
     <div class="tiny-break"></div>
+    <!--
     <a class="button" href="http://www.fablabtaiwan.org.tw/" target="_blank">
     <i class="fa fa-external-link"></i> Visit Fablab Dynamic</a> -->
       
