--- a/projects/editing.html
+++ b/projects/editing.html
@@ -13,11 +13,11 @@
     <div class="clear"></div>
     <div class="small-break"></div>
     <div class="col-lg-8 col-sm-6">
-     <!-- 
+      
       <p><b>About</b><br/>
-            Composed of a variety of works. <br/><br/>
+            Editing reel composed of a variety of works up to 2020. <br/><br/>
       </p>
-      -->
+     
     </div>
     <div class="col-lg-4 col-sm-6 border-left-wrapper">
       <p> <strong> Position</strong> <span class="alignright">Editor</span></p>
