--- a/projects/editing.html
+++ b/projects/editing.html
@@ -15,7 +15,7 @@
     <div class="col-lg-8 col-sm-6">
       
       <p><b>About</b><br/>
-            Editing reel composed of a variety of works up to 2020. <br/><br/>
+            Montage composed of a variety of works up to 2020. <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
       </p>
      
     </div>
