--- a/projects/editing.html
+++ b/projects/editing.html
@@ -1,5 +1,5 @@
 <div id="custom-content" class="white-popup-block">
-  <div class="videoWrapper2">
+  <div class="video235Wrapper">
     <iframe src="https://player.vimeo.com/video/466840370" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
     
   </div>
