--- a/projects/editing.html
+++ b/projects/editing.html
@@ -1,7 +1,8 @@
 <div id="custom-content" class="white-popup-block">
-  <div class="videoWrapper235">
+  <div class="videoWrapper"> 
+    <div>
     <iframe src="https://player.vimeo.com/video/466840370" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-    
+    </div>
   </div>
   
   <script src="js/jquery.fitvids.js" type="text/javascript"></script>
