--- a/projects/editing.html
+++ b/projects/editing.html
@@ -1,6 +1,6 @@
 <div id="custom-content" class="white-popup-block">
   <div class="videoWrapper"> 
-    <div>
+    <div class="ratio">
     <iframe src="https://player.vimeo.com/video/466840370" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
     </div>
   </div>
