--- a/projects/video_silence.html
+++ b/projects/video_silence.html
@@ -13,7 +13,7 @@
     <div class="clear"></div>
     <div class="small-break"></div>
     <div class="col-lg-8 col-sm-6">
-      <p><b>Synopsis</b><br/>
+      <p><b>Logline</b><br/>
             In the seventeenth century, two Jesuit priests face violence and persecution when they travel to 
             Japan to locate their mentor and propagate Christianity. 
       </p>
