--- a/projects/video_sun.html
+++ b/projects/video_sun.html
@@ -12,8 +12,8 @@
     <div class="clear"></div>
     <div class="small-break"></div>
     <div class="col-lg-8 col-sm-6">
-      <p><b>Synopsis</b><br/>
-            Four high school students try to pull off a heist of stealing the Dr. Sun Yat-Sen statue from their school.
+      <p><b>Logline</b><br/>
+            Four high school students try to pull off a heist of stealing a Dr. Sun Yat-Sen statue from their school.
             Chaos ensues when they find out there is another team after the same target.
       </p>
       <p><b>About</b><br/>
