--- a/projects/video_sun.html
+++ b/projects/video_sun.html
@@ -17,7 +17,7 @@
             Chaos ensues when they find out there is another team after the same target.
       </p>
       <p><b>About</b><br/>
-            Winner of the 51st Golden Horse Award for Best Original Screenplay.
+            Winner of the 51st Golden Horse Award for Best Original Screenplay
       </p>
       <br/>
       <p>
