--- a/projects/video_monster.html
+++ b/projects/video_monster.html
@@ -13,7 +13,7 @@
     <div class="clear"></div>
     <div class="small-break"></div>
     <div class="col-lg-8 col-sm-6">
-      <p><b>Synopsis</b><br/>
+      <p><b>Logline</b><br/>
             A highschool gang of bullies and a nerd encounter canniballous monsters. 
       </p>
       <p><b>About</b><br/>
