--- a/projects/video_tread.html
+++ b/projects/video_tread.html
@@ -14,7 +14,7 @@
     <div class="small-break"></div>
     <div class="col-lg-8 col-sm-6">
        
-       <p><b>Synopsis</b><br/>
+       <p><b>Logline</b><br/>
             The Treadstone project, having created super spy Jason Bourne, 
             turns its attention on a new protocol to develop unstoppable superhuman assassins.   
       </p>
