--- a/projects/video_boat.html
+++ b/projects/video_boat.html
@@ -13,7 +13,7 @@
     <div class="clear"></div>
     <div class="small-break"></div>
     <div class="col-lg-8 col-sm-6">
-      <p><b>Synopsis</b><br/>
+      <p><b>Logline</b><br/>
             An Asian-American family decides to move to Orlando, Florida from Washington D.C. 
             in order to embrace the "American Dream." However, the family faces many obstacles 
             as they try to assimilate with the new culture that surrounds them.  
