--- a/projects/video_tigertail.html
+++ b/projects/video_tigertail.html
@@ -12,7 +12,7 @@
     <div class="clear"></div>
     <div class="small-break"></div>
     <div class="col-lg-8 col-sm-6">
-      <p><b>Synopsis</b><br/>
+      <p><b>Logline</b><br/>
             A man reflects on the lost love of his youth and his long-ago journey from Taiwan to America 
             as he begins to reconnect with his estranged daughter.
       </p>
