--- a/projects/video_jaehyung.html
+++ b/projects/video_jaehyung.html
@@ -12,12 +12,11 @@
     <div class="clear"></div>
     <div class="small-break"></div>
     <div class="col-lg-8 col-sm-6">
-      <p><b>Synopsis</b><br/>
-            Jaehyung, the drummer in the sci-fi band, The Futures, quits the band to woo his ex-girlfriend
-            back with her style of rock’n’roll music. 
+      <p><b>Logline</b><br/>
+            A drummer in a indie band quits the band to woo his ex-girlfriend back with her style of rock’n’roll music. 
       </p>
       <p><b>About</b><br/>
-            2013 Palm Springs International ShortFest Selection.
+            2013 Palm Springs International ShortFest Selection
       </p>
      
     </div>
