--- a/projects/video_silence.html
+++ b/projects/video_silence.html
@@ -18,7 +18,7 @@
             Japan to locate their mentor and propagate Christianity. 
       </p>
       <p><b>About</b><br/>
-            "Silence" was shot entirely on location in Taiwan with an international crew in 2015.
+            <i>Silence</i> was shot entirely on location in Taiwan with an international crew in 2015.
       </p>
       
     </div>
