--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           <div class="info-box-content">
             <div class="parent">
               <div class="child">
-                <h2>Video Editor Reel</h2>
+                <h2>Editing Reel</h2>
                 <p class="uppercase">Showreel</p>
               </div>
             </div>
@@ -404,7 +404,7 @@
   
   <footer>
     <div>
-      <p> Copyright © Lee, Kai-Wei 2020. All rights reserved. </p>
+      <p> Copyright © Lee, Kai-Wei 2021. All rights reserved. </p>
     </div>
   </footer>
 </div>
