--- a/projects/editing.html
+++ b/projects/editing.html
@@ -8,7 +8,7 @@
   <script src="js/jquery.fitvids.js" type="text/javascript"></script>
   <div class="popup-content">
     <div class="col-lg-12 centered">
-      <h2>Video Editor Reel</h2>
+      <h2>Editing Reel</h2>
       <p class="uppercase">Showreel</p>
     </div>
     <div class="clear"></div>
