--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
           <li> <a href="#reel">Showreel <span>1</span></a> </li>
         </ul>
       </li>
-      <li> <a href="contact">Contact</a> </li>
-      <!-- <li> <a href="#" class="sub-nav-toggle">Features</a>
+      <!--<li> <a href="contact">Contact</a> </li>
+       <li> <a href="#" class="sub-nav-toggle">Features</a>
         <ul class="sub-nav hidden">
           <li> <a href="single-project.html">Project</a> </li>
           <li> <a href="single-post.html">Post</a> </li>
