--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
   </nav>
   <!-- end main nav -->
   <div class="profile">
+    <a href="https://vimeo.com/kaiweilee">
     <img class="profile"src="image/keaton.jpg" alt="Avatar" style="width:100px">
   </div> 
   <ul class="bio-list clearfix">
