--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
   </nav>
   <!-- end main nav -->
   <div class="profile">
+    <a href="https://www.vimeo.com/kaiweilee"></a>
     <img class="profile" src="image/keaton.jpg" title="Vimeo page" alt="Avatar" style="width:100px">
   </div> 
   <ul class="bio-list clearfix">
