--- a/index.html
+++ b/index.html
@@ -58,8 +58,9 @@
   </nav>
   <!-- end main nav -->
   <div class="profile">
-    <a href="https://www.vimeo.com/kaiweilee"></a>
-    <img class="profile" src="image/keaton.jpg" title="Vimeo page" alt="Avatar" style="width:100px">
+    <a href="https://www.vimeo.com/kaiweilee">
+     <img class="profile" src="image/keaton.jpg" title="Vimeo page" alt="Avatar" style="width:100px">
+    </a>
   </div> 
   <ul class="bio-list clearfix">
      <div class="b1"><i>Kai Wei is an</i>&nbsp;▼<br/>
