--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   </nav>
   <!-- end main nav -->
   <div class="profile">
-    <a href="https://www.vimeo.com/kaiweilee">
+    <a href="https://www.vimeo.com/kaiweilee" target="_blank">
      <img class="profile" src="image/keaton.jpg" title="Vimeo page" alt="Avatar" style="width:100px">
     </a>
   </div> 
