--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <!-- end main nav -->
   <div class="profile">
     <a href="https://www.vimeo.com/kaiweilee" target="_blank">
-     <img src="image/keaton.jpg" title="Vimeo page" alt="Avatar" style="width:100px">
+     <img id="profile-pic" src="image/keaton.jpg" alt="Avatar" style="width:100px">
     </a>
   </div> 
   <ul class="bio-list clearfix">
