--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
   </nav>
   <!-- end main nav -->
   <div class="profile">
-    <a href="https://www.vimeo.com/kaiweilee" target="_blank">
-     <img id="profile-pic" title="Vimeo page" alt="Avatar" style="width:100px">
+    <a id="profile-pic" href="https://www.vimeo.com/kaiweilee" target="_blank">
+     <!--<img id="profile-pic" title="Vimeo page" alt="Avatar" style="width:100px">-->
     </a>
   </div> 
   <ul class="bio-list clearfix">
