--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <!-- end main nav -->
   <div class="profile">
     <a href="https://www.vimeo.com/kaiweilee" target="_blank">
-      <img id="profile-pic" title="Vimeo page" alt="Avatar">
+      <img id="profile-pic" src="/image/keaton.jpg" title="Vimeo page" alt="Avatar">
     </a>
   </div> 
   <ul class="bio-list clearfix">
