--- a/index.html
+++ b/index.html
@@ -59,7 +59,10 @@
   <!-- end main nav -->
   <div class="profile">
     <a href="https://www.vimeo.com/kaiweilee" target="_blank">
-      <img id="profile-pic" src="/image/keaton.jpg" title="Vimeo page" alt="Avatar">
+      <img id="profile-pic" src="/image/keaton.jpg" title="Vimeo" alt="Avatar">
+       <div class="profile-overlay">
+        <div class="profile-overlay-text">Vimeo Page</div>
+       </div>
     </a>
   </div> 
   <ul class="bio-list clearfix">
