--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
   </nav>
   <!-- end main nav -->
   <div class="profile">
-    <a href="https://www.vimeo.com/kaiweilee" target="_blank">
-      <img id="profile-pic" src="/image/keaton.jpg" title="Vimeo" alt="Avatar">
+    <a class-"profile-link" href="https://www.vimeo.com/kaiweilee" target="_blank">
+      <img id="profile-pic" src="/image/keaton.jpg" title="Vimeo page" alt="Avatar">
        <div class="profile-overlay">
         <div class="profile-overlay-text">Vimeo Page</div>
        </div>
