--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   </nav>
   <!-- end main nav -->
   <div class="profile">
-    <a class-"profile-link" href="https://www.vimeo.com/kaiweilee" target="_blank">
+    <a class="profile-link" href="https://www.vimeo.com/kaiweilee" target="_blank">
       <img id="profile-pic" src="/image/keaton.jpg" title="Vimeo page" alt="Avatar">
        <div class="profile-overlay">
         <div class="profile-overlay-text">Vimeo Page</div>
