--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
   </nav>
   <!-- end main nav -->
   <div class="profile">
-    <a class="profile-link" href="https://www.vimeo.com/kaiweilee" target="_blank">
-      <img id="profile-pic" src="/image/keaton.jpg" title="Vimeo" alt="Avatar">
+    <!--<a class="profile-link" href="https://www.vimeo.com/kaiweilee" target="_blank">-->
+      <img id="profile-pic" src="/image/keaton.jpg" alt="Avatar">
     </a>
   </div> 
   <ul class="bio-list clearfix">
@@ -68,6 +68,11 @@
      <div class="b3">Assistant Director</div>
      <div class="b4">▲&nbsp;<i>based in Taiwan.</i><br/>
   </ul>
+   <div class="vimeo">  
+       <a class="button" href="https://www.vimeo.com/kaiweilee" target="_blank">
+          Vimeo Page&nbsp;&nbsp;<i class="fa fa-external-link"></i>
+       </a> 
+     </div>
 </header>
 <div id="white-background"></div>
 <div id="background-color"></div>
