--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
     </a>
   </div> 
   <ul class="bio-list clearfix">
-     <div class="b1"><i>Kai Wei is an</i>&nbsp;▼<br/>
+     <div class="b1"><i>Kai Wei is an</i><br/>
      <div class="b2">Editor<br/>
      <div class="b3">Assistant Director</div>
-     <div class="b4">▲&nbsp;<i>based in Taiwan.</i><br/>
+     <div class="b4"><i>based in Taiwan.</i><br/>
   </ul>
    <div class="vimeo">  
        <a class="button" href="https://www.vimeo.com/kaiweilee" target="_blank">
