--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   </ul>
   <div class="vimeo">  
     <a class="button" href="https://www.vimeo.com/kaiweilee" target="_blank">
-          Vimeo Page&nbsp;&nbsp;&nbsp;&nbsp;<i class="fa fa-external-link"></i>
+          Vimeo Page&nbsp;&nbsp;&nbsp;<i class="fa fa-external-link"></i>
     </a> 
   </div>
 </header>
