--- a/index.html
+++ b/index.html
@@ -69,9 +69,7 @@
      <div class="b4"><i>based in Taiwan.</i><br/>
   </ul>
   <div class="vimeo">  
-    <a class="button" href="https://www.vimeo.com/kaiweilee" target="_blank">
-          Vimeo Page&nbsp;&nbsp;&nbsp;<i class="fa fa-external-link"></i>
-    </a> 
+    <a class="button" href="https://www.vimeo.com/kaiweilee" target="_blank">Vimeo Page </a> 
   </div>
 </header>
 <div id="white-background"></div>
