--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
      <div class="b4"><i>based in Taiwan.</i><br/>
   </ul>
   <div class="vimeo">  
-    <a class="button" href="https://www.vimeo.com/kaiweilee" target="_blank">Vimeo Page </a> 
+    <a id="vimeo-link" href="https://www.vimeo.com/kaiweilee" target="_blank">Vimeo Page </a> 
   </div>
 </header>
 <div id="white-background"></div>
