--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
      <div class="b3">Assistant Director</div>
      <div class="b4"><i>based in Taiwan.</i><br/>
   </ul>
-  <div class="vimeo clearfix">  
+  <div id="vimeo">  
     <a class="button" id="vimeo-link" href="https://www.vimeo.com/kaiweilee" target="_blank">Vimeo Page </a> 
   </div>
 </header>
