--- a/index.html
+++ b/index.html
@@ -58,15 +58,14 @@
   </nav>
   <!-- end main nav -->
   <div class="profile">
-    <!--<a class="profile-link" href="https://www.vimeo.com/kaiweilee" target="_blank">-->
       <img id="profile-pic" src="/image/keaton.jpg" alt="Avatar">
     </a>
   </div> 
   <ul class="bio-list clearfix">
-     <div class="b1"><i>Kai Wei is an</i><br/>
+     <div class="b1">Kai Wei is an<br/>
      <div class="b2">Editor<br/>
      <div class="b3">Assistant Director</div>
-     <div class="b4"><i>based in Taiwan.</i><br/>
+     <div class="b4">based in Taiwan.<br/>
   </ul>
   <div id="vimeo">  
     <a class="button" id="vimeo-link" href="https://www.vimeo.com/kaiweilee" target="_blank">Vimeo Page </a> 
