--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
      <div class="b4">based in Taiwan.<br/>
   </ul>
   <div id="vimeo">  
-    <a class="button" id="vimeo-link" href="https://www.vimeo.com/kaiweilee" target="_blank">Vimeo Page&nbsp;&nbsp;<i class="fa fa-external-link"></i></a> 
+    <a class="button" id="vimeo-link" href="https://www.vimeo.com/kaiweilee" target="_blank">
+      Vimeo Page&nbsp;&nbsp;&nbsp;&nbsp;<i class="fa fa-external-link"></i>
+    </a> 
   </div>
 </header>
 <div id="white-background"></div>
