--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   </ul>
   <div id="vimeo">  
     <a class="button" id="vimeo-link" href="https://www.vimeo.com/kaiweilee" target="_blank">
-      Vimeo Page&nbsp;&nbsp;&nbsp;&nbsp;<i class="fa fa-external-link"></i>
+      Vimeo Page&nbsp;&nbsp;&nbsp;<i class="fa fa-external-link"></i>
     </a> 
   </div>
 </header>
