--- a/projects/video_silence.html
+++ b/projects/video_silence.html
@@ -28,7 +28,7 @@
       <p> <strong> Writer</strong> <span class="alignright">Shûsaku Endô, Jay Cocks</span></p>
     <div class="tiny-break"></div>
     <div align="center">  
-       <a class="button" href="http://www.imdb.com/title/tt0490215/" target="_blank" style="text-align:center;">Imdb Page </a> 
+       <a class="button" href="http://www.imdb.com/title/tt0490215/" target="_blank" style="position:absolute;right:0px;text-align:center;">Imdb Page </a> 
      </div>
       
     </div>
