--- a/projects/video_sun.html
+++ b/projects/video_sun.html
@@ -35,8 +35,7 @@
       <p> <strong> Writer</strong> <span class="alignright">Yee Chih-Yen</span></p>
     <div class="tiny-break"></div>
     <div align="center">  
-       <a class="button" href="http://www.imdb.com/title/tt4044970/" target="_blank">
-          IMDb Page&nbsp;&nbsp;<i class="fa fa-external-link"></i>
+       <a class="button" href="http://www.imdb.com/title/tt4044970/" target="_blank" style="position:absolute;right:15px;text-align:center;">Imdb Page </a> 
        </a> 
      </div>
       
