--- a/projects/video_sun.html
+++ b/projects/video_sun.html
@@ -30,7 +30,7 @@
       </p>
     </div>
     <div class="col-lg-4 col-sm-6 border-left-wrapper">
-      <p> <strong> Position</strong> <span class="alignright">Production Coordinator & Post Production Supervisor</span></p>
+      <p> <strong> Position</strong> <span class="alignright">Production Coordinator<br/>Post Production Supervisor</span></p>
       <p> <strong> Director</strong> <span class="alignright">Yee Chih-Yen</span></p>
       <p> <strong> Writer</strong> <span class="alignright">Yee Chih-Yen</span></p>
     <div class="tiny-break"></div>
