--- a/projects/video_tread.html
+++ b/projects/video_tread.html
@@ -29,9 +29,7 @@
       <p> <strong> Director</strong> <span class="alignright">Wayne Yip</span></p>
     <div class="tiny-break"></div>
      <div align="center">  
-       <a class="button" href="http://www.imdb.com/title/tt8289480/" target="_blank">
-          IMDb Page&nbsp;&nbsp;<i class="fa fa-external-link"></i>
-       </a> 
+       <a class="button" href="http://www.imdb.com/title/tt8289480/" target="_blank" style="position:absolute;right:15px;text-align:center;">Imdb Page </a> 
      </div>
       
     </div>
