--- a/projects/video_tigertail.html
+++ b/projects/video_tigertail.html
@@ -27,9 +27,7 @@
       <p> <strong> Writer</strong> <span class="alignright">Alan Yang</span></p>
     <div class="tiny-break"></div>
     <div align="center">  
-       <a class="button" href="http://www.imdb.com/title/tt8902948/" target="_blank">
-          IMDb Page&nbsp;&nbsp;<i class="fa fa-external-link"></i>
-       </a> 
+      <a class="button" href="http://www.imdb.com/title/tt8902948/" target="_blank" style="position:absolute;right:15px;text-align:center;">Imdb Page </a> 
      </div>
       
     </div>
