--- a/index.html
+++ b/index.html
@@ -35,12 +35,13 @@
     <ul class="option-set clearfix" data-option-key="filter">
       <li> <a href="#" class="sub-nav-toggle active">Portfolio</a>
         <ul id="options" class="sub-nav">
-          <li class="selected"> <a href="#home">All <span>18</span></a> </li>
-          <li> <a href="#feature">Feature Film <span>3</span></a> </li>
+          <li class="selected"> <a href="#home">All <span>21</span></a> </li>
+          <li> <a href="#feature">Feature Film <span>4</span></a> </li>
           <li> <a href="#tv">TV <span>3</span></a> </li>
           <li> <a href="#trailer">Trailer <span>7</span></a> </li>
           <li> <a href="#music">Music Video <span>3</span></a> </li>
-          <li> <a href="#short">Short Film <span>1</span></a> </li>
+          <li> <a href="#short">Short Film <span>2</span></a> </li>
+          <li> <a href="#commercial">Commercial <span>1</span></a> </li>
           <li> <a href="#reel">Showreel <span>1</span></a> </li>
         </ul>
       </li>
@@ -125,13 +126,28 @@
         </a> </div>
     </div>
     <div class="element  clearfix col-lg-4 col-md-6 col-sm-6 col-xs-12 home feature">
-      <div class="margin-wrapper"> <a class="simple-ajax-popup" href="projects/video_sun.html" data-title="Meeting Dr. Sun">
+      <div class="margin-wrapper"> <a class="simple-ajax-popup" href="projects/video_sun.html" data-title="">
         <figure class="images"> <img src="image/meeting.jpg" alt="" /> </figure>
         <div class="covering-image centered">
           <div class="info-box-content">
             <div class="parent">
               <div class="child">
                 <h2>Meeting Dr. Sun</h2>
+                <p class="uppercase">Feature Film</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        </a> </div>
+    </div>
+    <div class="element  clearfix col-lg-4 col-md-6 col-sm-6 col-xs-12 home feature">
+      <div class="margin-wrapper"> <a class="simple-ajax-popup" href="projects/video_lost.html" data-title="">
+        <figure class="images"> <img src="image/lost.jpg" alt="" /> </figure>
+        <div class="covering-image centered">
+          <div class="info-box-content">
+            <div class="parent">
+              <div class="child">
+                <h2>City of Lost Things</h2>
                 <p class="uppercase">Feature Film</p>
               </div>
             </div>
@@ -354,6 +370,22 @@
        </div>
     </div>
     <div class="element  clearfix col-lg-4 col-md-6 col-sm-6 col-xs-12 home short">
+      <div class="margin-wrapper"> <a class="simple-ajax-popup" href="projects/video_dahlia.html" data-title="">
+        <figure class="images"> <img src="image/dahlia.jpg" alt="" /> </figure>
+        <div class="covering-image centered">
+          <div class="info-box-content">
+            <div class="parent">
+              <div class="child">
+                <h2>Dahlia White</h2>
+                <p class="uppercase">Short Film</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        </a>
+       </div>
+    </div>
+    <div class="element  clearfix col-lg-4 col-md-6 col-sm-6 col-xs-12 home short">
       <div class="margin-wrapper"> <a class="simple-ajax-popup" href="projects/video_jaehyung.html" data-title="">
         <figure class="images"> <img src="image/jaehyung.jpg" alt="" /> </figure>
         <div class="covering-image centered">
@@ -369,9 +401,7 @@
         </a>
        </div>
     </div>
-    
-    <!--
-     <div class="element  clearfix col-lg-4 col-md-6 col-sm-6 col-xs-12 home commercial">
+    <div class="element  clearfix col-lg-4 col-md-6 col-sm-6 col-xs-12 home commercial">
       <div class="margin-wrapper"> <a class="simple-ajax-popup" href="projects/video_firefly.html" data-title="">
         <figure class="images"> <img src="image/firefly.jpg" alt="" /> </figure>
         <div class="covering-image centered">
@@ -386,23 +416,7 @@
         </div>
         </a> </div>
     </div>
-    -->
-    <!--
-    <div class="element  clearfix col-lg-4 col-md-6 col-sm-6 col-xs-12 home music">
-      <div class="margin-wrapper"> <a href="image/nature06.jpg" data-title="" data-fancybox-group="group1" class="popup">
-        <figure class="images"> <img src="image/solitude.jpg" alt="" /> </figure>
-        <div class="covering-image centered">
-          <div class="info-box-content">
-            <div class="parent">
-              <div class="child">
-                <h2>Light of Solitude</h2>
-                <p class="uppercase">music Video</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        </a> </div>
-    </div> -->
+    
   </div> 
   <!-- end #container -->
   
