--- a/projects/video_dahlia.html
+++ b/projects/video_dahlia.html
@@ -13,7 +13,7 @@
     <div class="small-break"></div>
     <div class="col-lg-8 col-sm-6">
        <p><b>Logline</b><br/>
-            A college freshman faces unexpected scrutiny when she applies for an elite sorority.
+            A college freshman faces unexpected scrutiny when she applies for an elite sorority of her dream.
       </p>
       
     </div>
