--- a/projects/video_lost.html
+++ b/projects/video_lost.html
@@ -21,7 +21,7 @@
       
     </div>
     <div class="col-lg-4 col-sm-6 border-left-wrapper">
-      <p> <strong> Position</strong> <span class="alignright">Associate Editor</span></p>
+      <p> <strong> Position</strong> <span class="alignright">Editor</span></p>
       <p> <strong> Director</strong> <span class="alignright">Yee Chih-Yen</span></p>
       <p> <strong> Producer</strong> <span class="alignright">Lee Lieh</span></p>
     <div class="tiny-break"></div>
