--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
      <div class="b4">based in Taiwan.<br/>
   </ul>
   <div id="vimeo">  
+    <a class="button" id="imdb-link" href="https://www.imdb.com/name/nm5280256/" target="_blank">IMDb Page </a> 
     <a class="button" id="vimeo-link" href="https://www.vimeo.com/kaiweilee" target="_blank">Vimeo Page </a> 
   </div>
 </header>
